/*
*  This file is part of aasdk library project.
*  Copyright (C) 2018 f1x.studio (Michal Szwaj)
*
*  aasdk is free software: you can redistribute it and/or modify
*  it under the terms of the GNU General Public License as published by
*  the Free Software Foundation; either version 3 of the License, or
*  (at your option) any later version.

*  aasdk is distributed in the hope that it will be useful,
*  but WITHOUT ANY WARRANTY; without even the implied warranty of
*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
*  GNU General Public License for more details.
*
*  You should have received a copy of the GNU General Public License
*  along with aasdk. If not, see <http://www.gnu.org/licenses/>.
*/

syntax="proto2";

import "AVStreamTypeEnum.proto";
import "AudioTypeEnum.proto";
import "AudioConfigData.proto";
import "VideoConfigData.proto";

package aasdk.proto.data;

message AVChannel
{
    required enums.AVStreamType.Enum stream_type = 1;
    optional enums.AudioType.Enum audio_type = 2;
    repeated AudioConfig audio_configs = 3;
    repeated VideoConfig video_configs = 4;
    optional bool available_while_in_call = 5;
}
